# oasis_auv

oasis_auv/: CMakeLists.txt  package.xml
oasis_auv_bringup/: CMakeLists.txt  package.xml
oasis_auv_bringup/launch/: bringup_helm.launch  bringup_simulation.launch  bringup_vehicle.launch
oasis_auv_bringup/launch/include/: control.launch.xml  description.launch.xml  localization.launch.xml  localization_global.launch.xml
oasis_auv_config/: CMakeLists.txt  package.xml
oasis_auv_config/config/: control.yaml  navsat.yaml  robot_localization_local.yaml
oasis_auv_config/mission/config/: helm.yaml
oasis_auv_config/mission/param/: depth_tracking.yaml  direct_control.yaml  direct_control_auv_move.yaml  direct_control_float.yaml  gps_wpt.yaml  path_global.yaml  path_local.yaml  periodic_surfacing.yaml  timer.yaml
oasis_auv_description/: CMakeLists.txt  package.xml
oasis_auv_description/launch/: description.launch
oasis_auv_description/rviz/: config.rviz
oasis_auv_description/urdf/: base.urdf.xacro  base_sf.urdf.xacro
oasis_auv_stonefish/: CMakeLists.txt  package.xml
oasis_auv_stonefish/description/: materials.scn.xacro  oasis_auv.scn.xacro
oasis_auv_stonefish/launch/: simulation.launch
oasis_auv_stonefish/scenarios/: under_ice.scn.xacro  under_ice.xacro
